# fintl

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  dev-config.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: releases.md
notebooks/: dev.ipynb  plot.ipynb  scalable-image-parser-dev.ipynb
src/fintl/: fine_logging.py  path_utils.py
src/fintl/accounts_etl/: exceptions.py  file_helper.py  files.py  labels.py  process_accounts.py  registry.py  runner.py  schemas.py  store.py  utils.py
src/fintl/accounts_etl/dkb/: credit0.py  festgeld0.py  files.py  giro0.py  giro202307.py  giro202312.py  plugin.py  tagesgeld0.py  tagesgeld202307.py  tagesgeld202312.py
src/fintl/accounts_etl/gls/: credit0.py  giro0.py  helper.py  plugin.py
src/fintl/accounts_etl/postbank/: giro0.py  giro202305.py  plugin.py
src/fintl/accounts_etl/scalable/: broker0.py  broker20231028.py  broker20260309.py  files.py  plugin.py
src/fintl/cli/: README.md  etl.py  main.py  plot.py  search.py  search.tcss  store.py
tests/: conftest.py  logger-config.json  test_logging.py  test_path_utils.py
tests/accounts_etl/: test_files.py  test_labels.py  test_process_accounts.py  test_runner.py  test_schemas.py  test_store.py
tests/accounts_etl/dkb/: test_dkb_credit0.py  test_dkb_festgeld0.py  test_dkb_files.py  test_dkb_giro0.py  test_dkb_giro202307.py  test_dkb_giro202312.py  test_dkb_parsers_apply.py  test_dkb_tagesgeld0.py  test_dkb_tagesgeld202307.py  test_dkb_tagesgeld202312.py  test_utils.py
tests/accounts_etl/files/csv_files/DKB/credit/: 2022-03-15_to_2022-04-15_1234________5678.csv
tests/accounts_etl/files/csv_files/DKB/festgeld/: 07-06-2025_Umsatzliste_DKB Festzins_DE01234567890123456789.csv
tests/accounts_etl/files/csv_files/DKB/kontoauszug/: 0123456789_2022-09-15_to_2022-10-15.csv  09-12-2023_Umsatzliste_Girokonto_DE01234567890123456789.csv  23-09-2023_Umsatzliste_Girokonto_DE01234567890123456789.csv  24-02-2024_Umsatzliste_Girokonto_DE01234567890123456789.csv
tests/accounts_etl/files/csv_files/DKB/tagesgeld/: 0123456789_2023-04-16.csv  02-12-2023_Umsatzliste_Tagesgeld_DE01234567890123456789.csv  11-11-2023_Umsatzliste_Tagesgeld_DE01234567890123456789.csv  24-02-2024_Umsatzliste_Tagesgeld_DE01234567890123456789.csv
tests/accounts_etl/files/csv_files/Postbank/: Kontoumsaetze_123_1234567_12_20231028_083011.csv  Umsatzauskunft_KtoNr0123456789_31-12-2021_17-20-43.csv
tests/accounts_etl/files/html_files/Scalable-Capital/: 2022-08-12.html  2023-10-28.htm
tests/accounts_etl/gls/: test_credit0.py  test_giro0.py  test_helper.py
tests/accounts_etl/postbank/: test_postbank_giro0.py  test_postbank_giro202305.py  test_postbank_parsers_apply.py
tests/accounts_etl/scalable/: test_scalable_broker0.py  test_scalable_broker20231028.py  test_scalable_broker20260309.py  test_scalable_broker20260309_ollama.py  test_scalable_parsers_apply.py
tests/cli/: conftest.py  test_etl.py  test_plot.py  test_store.py
tests/fine_logging/: test_logging.py
(+4 files in other folders)
