[project]
name = "fintl"
version = "0.1.1"
description = "Financial ETL CLI: parse, normalize, and explore your bank transaction data."
readme = "README.md"
license = { text = "MIT" }
keywords = ["finance", "etl", "banking", "transactions", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
authors = [
    { name = "eschmidt42", email = "11818904+eschmidt42@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.4",
    "altair>=6.0.0",
    "beautifulsoup4>=4.14.3",
    "chardet>=7.3.0",
    "httpx>=0.28.1",
    "instructor>=1.14.5",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.3.3",
    "textual>=8.1.1",
    "xlsxwriter>=3.2.9",
]

[project.urls]
Homepage = "https://github.com/eschmidt42/fintl"
Repository = "https://github.com/eschmidt42/fintl"
Issues = "https://github.com/eschmidt42/fintl/issues"

[project.scripts]
fintl = "fintl.cli.main:app"

[build-system]
requires = ["uv_build>=0.6.6,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "inline-snapshot>=0.32.5",
    "nbconvert>=7.17.1",
    "notebook>=7.5.5",
    "prek>=0.3.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.7",
    "ty>=0.0.25",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
markers = [
    "ollama: requires a running Ollama instance with a multimodal model (skipped by default; run with -m ollama)",
]

[tool.inline-snapshot]
format-command="ruff check --fix-only --stdin-filename {filename} | ruff format --stdin-filename {filename}"
